# merlin

./: .clang-format  .cmake-format.yaml  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CPPLINT.cfg  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
cmake/: FindAVX.cmake  FindGPUArch.cmake  FindOpenMP.cmake
cmake/FindAVX/: CMakeLists.txt  avx_detector.cpp
docs/: Doxyfile
docs/source/: citations.bib  conf.py  developper_guide.rst  index.rst  installation.rst  license.rst  userguide.rst
docs/source/_img/: cuda_comp.dot  dependancy_graph.dot  dynamic_comp.dot  env_comp.dot  main_comp.dot  rdc_comp.dot  shared_comp.dot  source_tree.txt  static_comp.dot
docs/source/_static/: azura.css  azura.js  azura.sty  hsl_rgb.js  myepub.css
docs/source/_templates/: pyclass.rst
docs/source/capi/: index.rst
docs/source/developer/: array.rst  compilation.rst  cpmodel.rst  index.rst  macro.rst  mutex.rst  polynomial.rst  style.rst
docs/source/pyapi/: index.rst
ext/ap3_mpo/: CMakeLists.txt
ext/ap3_mpo/src/ap3_mpo/: ap3_xs.cpp  ap3_xs.hpp  declaration.hpp  glob.cpp  glob.hpp  hdf5_utils.cpp  hdf5_utils.hpp  hdf5_utils.tpp  help_message.cpp  help_message.hpp  main.cpp  properties.cpp  properties.hpp  query_mpo.cpp  query_mpo.hpp
ext/apollo3/: ap3_mpo.cpp  ap3_mpo.hpp  hdf5_utils.cpp  hdf5_utils.hpp  hdf5_utils.tpp  main.cpp
ext/spgrid/: CMakeLists.txt  test.cpp
ext/spgrid/src/spgrid/: declaration.hpp  hier_interpolator.cpp  hier_interpolator.hpp  interpolator.cpp  interpolator.cu  interpolator.hpp  sparse_grid.cpp  sparse_grid.hpp  sparse_grid.rdc  utils.cpp  utils.hpp  utils.rdc
inc/merlin/: array  array.hpp  autodiff.hpp  decorator.hpp  exports.hpp  grid.hpp  interpolant.hpp  lock.hpp  logger.hpp  nddata.hpp  parcel.hpp  slice.hpp  stock.hpp  tensor.hpp  utils.hpp  utils.tpp  vector.hpp  vector.tpp
inc/merlin/array/: array_src.hpp
merlin/: env.pxd  env.pyx  gpu_query.pxd  gpu_query.pyx  main.cpp  main.pyx  py_api.hpp  py_common.hpp  utils.pxd  vector.pxd  wrap_array.cpp  wrap_candy.cpp  wrap_cuda.cpp  wrap_env.cpp  wrap_grid.cpp  wrap_mics.cpp  wrap_proctype.cpp  wrap_regpl.cpp  wrap_splint.cpp  wrap_stat.cpp  wrap_utils.cpp  wrap_vector.cpp
merlin/array/: array.pxd  array.pyx  core.pyx  nddata.pxd  nddata.pyx  parcel.pxd  parcel.pyx  slice.pxd  stock.pxd  stock.pyx
merlin/cuda/: context.pxd  context.pyx  core.pyx  device.pxd  device.pyx  enum_types.pxd  event.pxd  event.pyx  stream.pxd  stream.pyx
merlin/device/: context.pxd  context.pyx  core.pyx  gpu_query.pxd  gpu_query.pyx
merlin/interpolant/: cartesian_grid.pxd  core.pyx  enum_method.pxd  interpolant.pxd  interpolant.pyx
merlin/intpl/: cartesian_grid.pyx  core.pyx  enum_method.pxd  interpolant.pyx
merlin/splint/: cartesian_grid.pxd  cartesian_grid.pyx  core.pyx  interpolator.pxd  interpolator.pyx
old_merlin/: env.cpp  env.pxd
old_merlin/array/: array.pxd  array.pyx  core.cpp  nddata.pxd  nddata.pyx  parcel.pxd  stock.pyx
old_merlin/cuda/: core.cpp  core.pyx  enum_types.pxd  event.pyx  stream.pyx
old_merlin/intpl/: cartesian_grid.pxd  cartesian_grid.pyx  core.cpp  interpolant.pxd
old_merlin/splint/: core.cpp  core.pyx  enum_method.pxd  interpolator.pyx
setup_cfg/: __init__.py  build_ext.py  copy_lib.py  create_merlin_init.py  ext_options.py  init.txt
src/: array.cpp  array.cu  autodiff.cpp  grid.cpp  grid.cu  interpolant.cpp  logger.cpp  merlin.hpp  nddata.cpp  parcel.cpp  parcel.cu  stock.cpp  tensor.cpp  tensor.cu  utils.cpp  utils.cu
src/merlin/: assume.hpp  avx.hpp  color.cpp  color.hpp  config.hpp  cuda_decorator.hpp  cuda_interface.cpp  cuda_interface.cu  cuda_interface.hpp  env.cpp  env.cu  env.hpp  exports.hpp  filelock.cpp  filelock.hpp  iterator.cpp  iterator.hpp  logger.cpp  logger.hpp  logger.rdc  memory.cpp  memory.cu  memory.hpp  ndindex.hpp  permutation.cpp  permutation.hpp  platform.hpp  settings.cpp  settings.hpp  shuffle.cpp  shuffle.hpp  slice.cpp  slice.hpp  slice.rdc  synchronizer.hpp  thread_divider.hpp  utils.cpp  utils.hpp  utils.rdc  vector.cpp  (+5 more)
src/merlin/array/: array.cpp  array.cu  array.hpp  array.rdc  copy.cpp  copy.hpp  copy.rdc  copy.tpp  declaration.hpp  nddata.cpp  nddata.hpp  nddata.rdc  operation.cpp  operation.hpp  operation.rdc  (+15 more)
tests/cpp/: cartesian_grid.cpp  copy_assign_array.cpp  copy_sliced_array.cpp  cuda_array.cu  grid_test.cpp  lagrange_test.cpp  log_test.cpp  test_array_and_slice.cpp  test_array_copy.cpp  test_array_stock.cpp  test_candy_gradient.cpp  test_candy_loss.cpp  test_candy_trainer.cpp  test_cartesian_grid.cpp  test_coefficient_calc.cpp  test_copy_array.cpp  test_copy_from_segmented_array.cpp  test_copy_on_sliced_array.cpp  test_file_lock.cpp  test_foo.cpp  test_gpu_query.cpp  test_grid_cartesian.cpp  test_grid_push_popback.cpp  test_interpolate_sliced_array.cpp  test_linalg_qr.cpp  test_logger.cpp  test_matrix_qr.cpp  test_mean_variance.cpp  test_model_launcher.cpp  test_norm_avx.cpp  test_polynomial_eval.cpp  test_regpl_polynomial.cpp  test_regression_poly.cpp  test_shuffle.cpp  test_slice_an_nddata.cpp  test_sparse_grid.cpp  test_sparsegrid_interpolate.cpp  test_splint_interpolator_cpu.cpp  test_stock_to_array.cpp  test_vector_convertable.cpp
tests/cu/: cuda_array.cu  test_array_parcel.cu  test_candy_launcher_gpu.cu  test_candy_model_gpu.cu  test_cartgrid_on_gpu.cu  test_coefficient_calc_gpu.cu  test_convert_array_to_parcel.cu  test_cuda_gpu_query.cu  test_gpu_query.cu  test_grid_cartesian_gpu.cu  test_grid_regular_gpu.cu  test_interpolator_gpu.cu  test_intvec_object_on_gpu.cu  test_kernel_lock.cu  test_launcher_gpu.cu  test_logger_cuhderr.cu  test_loss_function_gpu.cu  test_loss_function_on_gpu.cu  test_model_on_gpu.cu  test_multi_gpu.cu  test_optimizer_on_gpu.cu  test_parcel.cu  test_parcel_multigpu.cu  test_parcel_object_on_gpu.cu  test_polynom_eval_gpu.cu  test_qr_solve_gpu.cu  test_regpl_regressor_gpu.cu  test_vector_gpu.cu
tests/py/: test_array.py  test_candy.py  test_cartesian_grid.py  test_cuda_stream.py  test_grid.py  test_parcel.py  test_splint.py
tests/python/: cudastream.py
(+316 files in other folders)
